# minismtp

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  load.rs
src/connection/: create.rs  mod.rs  process.rs  rw.rs
src/parser/: data.rs  ehlo.rs  helo.rs  mail.rs  mod.rs  rcpt.rs  responses.rs  starttls.rs
src/security/: mod.rs  spf.rs
src/server/: create.rs  mod.rs  start.rs
