[package]
name = "smtpserver"
version = "0.1.0"
edition = "2021"

[dependencies]
async-smtp = "0.9.1"
async-std = "1.12.0"
base64 = "0.22.1"
env_logger = "0.11.5"
futures = "0.3.30"
hickory-resolver = "0.24.1"
ipnetwork = "0.20.0"
lettre = {version="0.11.7",features=["tracing","smtp-transport"]}
log = "0.4.22"
mailparse = "0.15.0"
openssl = "0.10.66"
rustls-pemfile = "2.1.3"
thiserror = "1.0.63"
tokio = {version="1.39.2",features=["full"]}
tokio-rustls = "0.26.0"
tokio-tls-upgrade = "0.1.0"
